maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:6: error: '=' expected but '.' found.
  var x := findBaggle(xMax,yMax)._1;
                                ^ShortestPathMaze:6: error: illegal start of simple expression
  var x := findBaggle(xMax,yMax)._1;
                                   ^ShortestPathMaze:7: error: '=' expected but '.' found.
  var y := findBaggle(xMax,yMax)._1;  
                                ^ShortestPathMaze:7: error: illegal start of simple expression
  var y := findBaggle(xMax,yMax)._1;  
                                   ^